--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,14 @@
     box-sizing: border-box;
 }
 
+img {
+    border-radius: 50%;
+    float: middle;
+    width:  80px;
+    height: 80px;
+    object-fit: cover;
+  }
+
 a{
     text-decoration: none;
     font-family: 'PT Sans', sans-serif;
